--- a/WEB-INF/config.properties
+++ b/WEB-INF/config.properties
@@ -1,10 +1,10 @@
-m1to=BIDS-Mailbox@state.gov
-m2to=BIDS-Mailbox@state.gov
-m1sub=Your recent submission to BIDS
-m1text=This is an automated response from the <a href="http://bids.state.gov/">Business Information Database System  (BIDS)</a>.<br/><br/>You recently submitted, or provided substantial edits to, information about a new business opportunity.  The details of your entry are provided below; should you need to correct any of this information, please reply to this e-mail  with  the necessary edits. <br/><br/>If all this data is correct, then no further action is needed.  Within two business days, you will receive a separate e-mail confirming that your data has been reviewed in Washington and publicly posted to the BIDS system.<br/>Thank you for supporting U.S. businesses and jobs through BIDS!<br/>
-m2sub=New BIDS entry for clearance - 
-m2esub=Edited BIDS entry for clearance - 
-m2text=Please review and clear the following BIDS entry within two business days of today. <br/> If you do not clear this entry, please inform the post POC above immediately and to try to resolve any questions.<br/>
-m3sub=Your entry posted to BIDS
-m3text=This message confirms that your project entry 
-m3text2=submitted to the Business Information Database System (BIDS) today has been posted publicly on the BIDS website.<br/><br/>You are encouraged to review and update the entry when new information of potential use to U.S. businesses becomes available.  In about 80 days you'll get a reminder from BIDS about this entry asking you to review and update it again; any BIDS entries that are not updated within 90 days are automatically archived and removed from the public system.<br/><br/>Thank you for supporting U.S. business and jobs through BIDS!
+message1to=
+message2to=
+message1subject=Your recent submission to BIDS
+message1text=This is an automated response from the <a href="http://bids.state.gov/">Business Information Database System  (BIDS)</a>.<br/><br/>You recently submitted, or provided substantial edits to, information about a new business opportunity.  The details of your entry are provided below; should you need to correct any of this information, please reply to this e-mail  with  the necessary edits. <br/><br/>If all this data is correct, then no further action is needed.  Within two business days, you will receive a separate e-mail confirming that your data has been reviewed in Washington and publicly posted to the BIDS system.<br/>Thank you for supporting U.S. businesses and jobs through BIDS!<br/>
+message2subject=New BIDS entry for clearance - 
+message2editSubject=Edited BIDS entry for clearance - 
+message2text=Please review and clear the following BIDS entry within two business days of today. <br/> If you do not clear this entry, please inform the post POC above immediately and to try to resolve any questions.<br/>
+message3subject=Your entry posted to BIDS
+message3text=This message confirms that your project entry 
+message3text2=submitted to the Business Information Database System (BIDS) today has been posted publicly on the BIDS website.<br/><br/>You are encouraged to review and update the entry when new information of potential use to U.S. businesses becomes available.  In about 80 days you'll get a reminder from BIDS about this entry asking you to review and update it again; any BIDS entries that are not updated within 90 days are automatically archived and removed from the public system.<br/><br/>Thank you for supporting U.S. business and jobs through BIDS!
